kubernetes/apps/network/internal/remote-services/services/sonarr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-sonarr
  namespace: network
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-sonarr
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-sonarr
addressType: IPv4
ports:
  - port: 8989
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-sonarr
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "sonarr"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "sonarr"
    gethomepage.dev/description: "TV Show Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/sonarr"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "sonarr.png"
    gethomepage.dev/widget.type: "sonarr"
    gethomepage.dev/widget.url: http://${SETTINGS_NAS_IP}:8989/sonarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_SONARR_KEY}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:8989
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /sonarr
          pathType: Prefix
          backend:
            service:
              name: remote-internal-sonarr
              port:
                number: 8989
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
